@@ -1,5 +1,10 @@
 2007-04-20  William Jon McCann  <mccann@jhu.edu>
 
+	* gui/gdmflexiserver.c: (maybe_lock_screen), (main):
+	Properly initialize gtk.  Fixes #431044
+
+2007-04-20  William Jon McCann  <mccann@jhu.edu>
+
 	* Makefile.am:
 	* configure.ac:
 	* gdm-restart.in:
